css/main.css
@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap");
:root {
    --clr-primary: hsl(171, 66%, 44%);
    --clr-secondary: hsl(233, 100%, 69%);
    --clr-dark-gray: hsl(210, 10%, 33%);
    --clr-gray: hsl(201, 11%, 66%);
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

html {
    font-size: 100%;
}

body {
    font-size: 1rem;
    line-height: 1.5;
    margin: 0;
    text-align: center;
    font-family: "Bai Jamjuree", sans-serif;
    color: var(--clr-gray);
}

h1,
h2,
h3,
h4,
p {
    margin: 0;
    padding: 0;
}
h1,
h2,
h3,
h4 {
    margin-bottom: 0.5rem;
    font-weight: 600;
    color: var(--clr-dark-gray);
}
p {
    font-size: clamp(1rem, 2vw, 1.7rem);
    font-weight: 400;
}

h1 {
    font-size: 3.5rem;
    font-size: clamp(2rem, 5vw, 4rem);
}

h2 {
    font-size: 2rem;
    font-size: clamp(1.8rem, 5vw, 2rem);
}

h4 {
    font-size: 1.1rem;
    font-size: clamp(1rem, 5vw, 1.4rem);
}
a {
    text-decoration: none;
    color: inherit;
    transition: color 200ms ease-in-out;
    cursor: pointer;
}
a:hover,
a:focus {
    color: var(--clr-primary);
}

img {
    max-width: 100%;
}

button {
    border: none;
    padding: 0.8rem 2rem;
    font-weight: 600;
    cursor: pointer;
}

section {
    margin-bottom: 7rem;
}

.spacer > * + * {
    margin-top: 2rem;
}

.primary {
    background-color: var(--clr-primary);
    border-bottom: 2px solid hsl(171, 66%, 35%);
    box-shadow: 0 12px 20px -8px hsl(171, 66%, 77%);
}
.secondary {
    background-color: var(--clr-secondary);
    border-bottom: 2px solid hsl(233, 100%, 63%);
    box-shadow: 0 12px 20px -8px hsl(201, 11%, 70%);
}

.btn {
    border-radius: 50px;
    color: white;
    font-size: 1rem;
}
.btn:hover,
.btn:focus {
    opacity: 0.8;
}
.btn-group {
    display: flex;
    flex-direction: column;
}
.btn-group > * + * {
    margin-top: 1.5rem;
}

.container {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

.overlay {
    background: linear-gradient(
        rgba(255, 255, 255, 0) 0%,
        rgba(255, 255, 255, 0) 40%,
        rgba(255, 255, 255, 0) 60%,
        rgba(255, 255, 255, 0) 80%,
        rgba(255, 255, 255, 1) 100%
    );
    padding-top: 4rem;
    padding-bottom: 4rem;
}

/* header */
header {
    background: url(../images/bg-header-mobile.png);
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    background-size: cover;
    position: relative;
}
.logo-container {
    display: flex;
    justify-content: center;
}

/* .intro {
} */

/* hero */
.hero-img {
    margin-bottom: 2rem;
}

.hero-secondary {
    /* padding-left: 3rem; */
    padding-right: 3rem;
}

.perk:not(:last-child) {
    margin-bottom: 3rem;
}
/* Features */
.feature {
    margin-top: 3rem;
}

/* Customers */

.customer {
    margin-bottom: 4rem;
}

/* Footer */

footer {
    background-color: hsl(201, 11%, 80%);
    color: var(--clr-dark-gray);
    padding: 3rem 0;
    text-transform: capitalize;
    margin-top: 8rem;
}
.footer-container {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 2rem;
}

.footer-logo {
    width: 10%;
    margin: 0 auto;
}

.grid-2 > :first-child,
.grid-3 > :first-child {
    margin-bottom: 2rem;
}

footer a {
    display: block;
}

.socials {
    display: flex;
    justify-content: center;
    gap: 1rem;
}

.social-icon {
    font-size: 1.4375rem;
    transition: transform 250ms ease-in-out, color 250ms ease-in-out;
}
.social-icon:hover,
.social-icon:focus {
    color: var(--clr-primary);
    transform: scale(1.1);
}

/* MEDIA QUERIES */

@media screen and (min-width: 768px) {
    .btn-group {
        flex-direction: row;
        justify-content: center;
    }
    .btn-group > * + * {
        margin-top: 0;
        margin-left: 1rem;
    }
}

@media screen and (min-width: 1024px) {
    .features {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
    .feature {
        margin-top: 0;
        flex-basis: 30%;
        align-self: baseline;
    }
    .feature img {
        height: 50px;
    }

    .customers {
        display: flex;
        justify-content: center;
    }
    .customer {
        flex-basis: 20%;
    }

    .hero {
        margin-bottom: 10rem;
    }

    .hero-secondary {
        display: flex;
        align-items: center;
        margin-top: 5rem;
    }

    .hero-img {
        flex-basis: 57%;
        margin-left: -48px;
        margin-right: 6rem;
    }

    .hero-perks {
        flex-basis: 30%;
        text-align: left;
    }

    .grid-1 {
        align-self: center;
    }
    .grid-5 {
        grid-column: 6/8;
    }

    .footer-logo {
        width: 50%;
    }

    .footer-container {
        grid-template-columns: repeat(7, 1fr);
        text-align: left;
    }
}

.attribution {
    background: #143d59;
    color: #f4b41a;
    font-size: 16px;
}

